# change-scribe

./: .change-scribe.toml  Cargo.toml  README.md  commitlint.toml
.githooks/: commit-msg
.github/workflows/: pr.yml  release.yml
src/: main.rs  parsing.rs
src/linting/: commit_scope.rs  commit_type.rs  mod.rs
