[package]
name = "change-scribe"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
clap-stdin = "0.5.1"
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
serde = { version = "1.0.207", features = ["derive"] }
thiserror = "1.0.63"
figment = { version = "0.10.19", features = ["toml"] }
