[package]
name = "change-scribe"
version = "0.1.0"
authors = ["Nils de Groot <nils@peeko.nl>"]
edition = "2021"
description = "A tool that validates that commit messages follow the conventional commit format, and lints them according to a configuration file."
license = "GPL-3.0"
repository = "https://github.com/nils-degroot/change-scribe"
categories = ["Command line utilities", "Development tools"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
clap-stdin = "0.5.1"
miette = { version = "7.2.0", features = ["fancy"] }
nom = "7.1.3"
serde = { version = "1.0.207", features = ["derive"] }
thiserror = "1.0.63"
figment = { version = "0.10.19", features = ["toml"] }
